--- a/styles/debug.css
+++ b/styles/debug.css
@@ -60,23 +60,19 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
+  font-family: "Georgia", "Emoji", serif; }
+
+.font-family-heading {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif; }
 
 .font-family-pre {
-  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "Menlo", "Consolas", "Emoji", monospace; }
 
 .italic {
   font-style: italic; }
 
 .bold {
   font-weight: bold; }
-
-.no-webfont {
-  font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
-  .no-webfont pre {
-    font-family: "Menlo", "Consolas", "Emoji", monospace; }
-  .no-webfont code {
-    font-family: "Menlo", "Consolas", "Emoji", monospace; }
 
 .colors {
   display: flex;
