--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.79.5
+ * style.css v6.80.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -38,6 +38,7 @@
   margin-right: -0.85rem; }
 
 h1, h2 {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-weight: 400;
   line-height: 1.36; }
 
@@ -98,8 +99,8 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 
 .section-footer, .post-list .info {
   color: #98928c;
-  font-size: 0.772rem;
-  line-height: 1.762; }
+  font-size: 0.662rem;
+  line-height: 2.055; }
   .section-footer .date, .post-list .info .date,
   .section-footer .tag,
   .post-list .info .tag {
@@ -115,11 +116,14 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
+  @media (min-width: 43.2rem) {
+    html {
+      font-size: 112.5%; } }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
+  font-family: "Georgia", "Emoji", serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 43.2rem) {
@@ -131,10 +135,10 @@ h1 {
   margin: 14.199rem 0 0; }
   @media (min-width: 43.2rem) {
     h1 {
-      font-size: 2.231rem; } }
+      font-size: 1.912rem; } }
 
 h2 {
-  font-size: 1.313rem;
+  font-size: 1.125rem;
   margin: 4.913rem 0 0; }
   @media (min-width: 43.2rem) {
     h2 {
@@ -157,7 +161,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
+  font-family: "Menlo", "Consolas", "Emoji", monospace;
   font-size: 1em;
   line-height: 1.36;
   overflow: auto; }
@@ -199,7 +203,7 @@ dl dl {
 
 dt {
   color: #534b47;
-  font-weight: bolder; }
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif; }
 
 dd {
   margin-left: 1.7rem; }
@@ -233,12 +237,13 @@ main {
 
 em {
   color: #534b47;
-  font-style: normal;
-  font-weight: bolder; }
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-style: normal; }
 
 strong {
   color: #f37f1e;
-  font-weight: bolder; }
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-weight: normal; }
 
 cite {
   font-style: normal; }
@@ -251,7 +256,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
+  font-family: "Menlo", "Consolas", "Emoji", monospace;
   font-size: 1em; }
   p code::before, p code::after, p
   var::before, p
@@ -309,6 +314,8 @@ td {
   white-space: nowrap; }
 
 th {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-weight: normal;
   text-align: left; }
   thead th {
     border-bottom: 0.125rem solid #cac6be; }
@@ -341,7 +348,7 @@ svg:not(:root) {
       margin-left: -16.731rem; } }
 
 .site-navigation {
-  font-size: 0.772rem;
+  font-size: 0.662rem;
   position: absolute;
   right: 0;
   text-transform: uppercase;
@@ -351,7 +358,7 @@ svg:not(:root) {
     padding-left: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 2.202;
+    line-height: 2.569;
     padding-right: 0.85rem; }
   .site-navigation a {
     color: inherit;
@@ -370,7 +377,8 @@ svg:not(:root) {
         padding-left: 0; } }
 
 .tagline {
-  font-size: 1.313rem;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-size: 1.125rem;
   line-height: 1.36;
   margin-top: 1.7rem; }
   @media (min-width: 43.2rem) {
@@ -403,10 +411,10 @@ svg:not(:root) {
     .section-footer {
       width: 13.841rem; }
       .section-footer p {
-        margin-top: 0.837rem; } }
+        margin-top: 0.621rem; } }
 
 .global-footer {
-  font-size: 0.772rem;
+  font-size: 0.662rem;
   margin-bottom: 1.7rem; }
   @media (min-width: 43.2rem) {
     .global-footer {
@@ -431,6 +439,7 @@ svg:not(:root) {
       margin-top: 14.199rem; } }
 
 .byline {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   color: #6a635e; }
   .byline mark {
     background-color: transparent;
@@ -447,12 +456,12 @@ svg:not(:root) {
     .site-search {
       position: absolute;
       right: 0.85rem;
-      top: 8.033rem;
+      top: 7.94rem;
       width: 43%;
       z-index: 1; } }
   @media (min-width: 59.931rem) {
     .site-search {
-      top: 13.88rem;
+      top: 13.786rem;
       width: 32%; } }
 
 .drop img {
@@ -485,7 +494,7 @@ svg:not(:root) {
     margin-top: 0; }
 
 .footnote {
-  font-size: 0.772rem; }
+  font-size: 0.662rem; }
   .footnote::before {
     border-top: 0.063rem solid #cac6be;
     content: "";
@@ -520,7 +529,7 @@ svg:not(:root) {
 .post-list {
   padding-left: 0; }
   .post-list li {
-    font-size: 1.313rem;
+    font-size: 1.125rem;
     line-height: 1.36;
     list-style-type: none;
     margin-top: 1rem; }
@@ -564,7 +573,7 @@ svg:not(:root) {
   color: #534b47;
   content: "Read older:";
   display: block;
-  font-weight: bolder;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   line-height: 1;
   margin-top: 4.913rem;
   text-transform: uppercase; }
@@ -581,11 +590,16 @@ svg:not(:root) {
 
 .seealso {
   color: #534b47;
-  font-size: 1.313rem; }
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-size: 1.125rem;
+  text-transform: uppercase; }
+  .seealso a {
+    font-family: "Georgia", "Emoji", serif;
+    text-transform: none; }
 
 .sidenote {
   color: #98928c;
-  font-size: 0.772rem; }
+  font-size: 0.662rem; }
   @media (min-width: 59.931rem) {
     .sidenote {
       text-align: left;
