--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.80.0
+ * style.css v6.80.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -80,7 +80,8 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border-radius: 0;
   box-sizing: border-box;
   color: #3c3330;
-  font-family: inherit;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-size: inherit;
   height: 1.95rem;
   padding: 0;
   width: 79%; }
@@ -90,7 +91,8 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border: 0;
   border-radius: 0;
   color: #fefcf8;
-  font-family: inherit;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-size: inherit;
   height: 1.95rem;
   padding: 0;
   position: absolute;
@@ -99,6 +101,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 
 .section-footer, .post-list .info {
   color: #98928c;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   line-height: 2.055; }
   .section-footer .date, .post-list .info .date,
@@ -348,6 +351,7 @@ svg:not(:root) {
       margin-left: -16.731rem; } }
 
 .site-navigation {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   position: absolute;
   right: 0;
@@ -377,7 +381,6 @@ svg:not(:root) {
         padding-left: 0; } }
 
 .tagline {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 1.125rem;
   line-height: 1.36;
   margin-top: 1.7rem; }
@@ -414,6 +417,7 @@ svg:not(:root) {
         margin-top: 0.621rem; } }
 
 .global-footer {
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   margin-bottom: 1.7rem; }
   @media (min-width: 43.2rem) {
@@ -439,7 +443,6 @@ svg:not(:root) {
       margin-top: 14.199rem; } }
 
 .byline {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   color: #6a635e; }
   .byline mark {
     background-color: transparent;
