--- a/styles/debug.css
+++ b/styles/debug.css
@@ -60,9 +60,6 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Georgia", "Emoji", serif; }
-
-.font-family-heading {
   font-family: "San Francisco", "Calibri", "Emoji", sans-serif; }
 
 .font-family-pre {
@@ -72,7 +69,7 @@ body::after {
   font-style: italic; }
 
 .bold {
-  font-weight: bold; }
+  font-weight: bolder; }
 
 .colors {
   display: flex;
