--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.80.1
+ * style.css v6.81.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -38,8 +38,7 @@
   margin-right: -0.85rem; }
 
 h1, h2 {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
-  font-weight: 400;
+  font-weight: normal;
   line-height: 1.36; }
 
 a {
@@ -80,7 +79,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border-radius: 0;
   box-sizing: border-box;
   color: #3c3330;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-family: inherit;
   font-size: inherit;
   height: 1.95rem;
   padding: 0;
@@ -91,7 +90,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border: 0;
   border-radius: 0;
   color: #fefcf8;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-family: inherit;
   font-size: inherit;
   height: 1.95rem;
   padding: 0;
@@ -101,7 +100,6 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 
 .section-footer, .post-list .info {
   color: #98928c;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   line-height: 2.055; }
   .section-footer .date, .post-list .info .date,
@@ -126,7 +124,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Georgia", "Emoji", serif;
+  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 43.2rem) {
@@ -205,8 +203,7 @@ dl dl {
   margin-top: 0; }
 
 dt {
-  color: #534b47;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif; }
+  color: #534b47; }
 
 dd {
   margin-left: 1.7rem; }
@@ -240,12 +237,11 @@ main {
 
 em {
   color: #534b47;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
-  font-style: normal; }
+  font-style: normal;
+  font-weight: bolder; }
 
 strong {
   color: #f37f1e;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-weight: normal; }
 
 cite {
@@ -317,8 +313,6 @@ td {
   white-space: nowrap; }
 
 th {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
-  font-weight: normal;
   text-align: left; }
   thead th {
     border-bottom: 0.125rem solid #cac6be; }
@@ -338,7 +332,7 @@ svg:not(:root) {
 .logo {
   color: #534b47;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.7;
   margin-top: 0;
   text-transform: uppercase; }
@@ -351,7 +345,6 @@ svg:not(:root) {
       margin-left: -16.731rem; } }
 
 .site-navigation {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   position: absolute;
   right: 0;
@@ -417,7 +410,6 @@ svg:not(:root) {
         margin-top: 0.621rem; } }
 
 .global-footer {
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 0.662rem;
   margin-bottom: 1.7rem; }
   @media (min-width: 43.2rem) {
@@ -573,10 +565,10 @@ svg:not(:root) {
       width: 24.872rem; } }
 
 .read-older a::before {
-  color: #534b47;
+  color: #3c3330;
   content: "Read older:";
   display: block;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
+  font-weight: bolder;
   line-height: 1;
   margin-top: 4.913rem;
   text-transform: uppercase; }
@@ -592,12 +584,11 @@ svg:not(:root) {
     margin-top: 4.913rem; } }
 
 .seealso {
-  color: #534b47;
-  font-family: "San Francisco", "Calibri", "Emoji", sans-serif;
   font-size: 1.125rem;
+  font-weight: bolder;
   text-transform: uppercase; }
   .seealso a {
-    font-family: "Georgia", "Emoji", serif;
+    font-weight: normal;
     text-transform: none; }
 
 .sidenote {
