--- a/styles/debug.css
+++ b/styles/debug.css
@@ -60,7 +60,7 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: -apple-system, "Segoe UI", "Emoji", sans-serif; }
+  font-family: -apple-system, "Helvetica Neue", "Segoe UI", "Emoji", sans-serif; }
 
 .font-family-pre {
   font-family: "Menlo", "Consolas", "Emoji", monospace; }
