--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.0
+ * style.css v6.82.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -124,7 +124,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: -apple-system, "Segoe UI", "Emoji", sans-serif;
+  font-family: -apple-system, "Helvetica Neue", "Segoe UI", "Emoji", sans-serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 38.2rem) {
