--- a/styles/debug.css
+++ b/styles/debug.css
@@ -4,9 +4,6 @@
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2012
  */
-@font-face {
-  font-family: "Emoji";
-  src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .show-column::before {
   background-image: linear-gradient(to right, lime 0, lime 100%), linear-gradient(to right, lime 0, lime 100%), linear-gradient(to right, magenta 0, magenta 100%);
   background-position: left center, right center, center;
@@ -60,10 +57,10 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: -apple-system, "Helvetica Neue", "Segoe UI", "Emoji", sans-serif; }
+  font-family: -apple-system, "Helvetica Neue", "Calibri", sans-serif; }
 
 .font-family-pre {
-  font-family: "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "Menlo", "Consolas", monospace; }
 
 .italic {
   font-style: italic; }
