--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,10 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.1
+ * style.css v6.82.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
-@font-face {
-  font-family: "Emoji";
-  src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
@@ -27,8 +24,6 @@
     clear: both; }
 
 .section-footer p {
-  -webkit-font-feature-settings: normal;
-  font-feature-settings: normal;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; }
@@ -83,7 +78,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   font-size: inherit;
   height: 1.95rem;
   padding: 0;
-  width: 79%; }
+  width: 74%; }
 .site-search .button, .searchbox .button {
   -webkit-appearance: none;
   background-color: #69a5d3;
@@ -96,7 +91,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   padding: 0;
   position: absolute;
   right: 0;
-  width: 20%; }
+  width: 25%; }
 
 .section-footer, .post-list .info {
   color: #98928c;
@@ -114,8 +109,6 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
       color: #2175b4; } }
 
 html {
-  -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
-  font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
   @media (min-width: 38.2rem) {
     html {
@@ -124,7 +117,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: -apple-system, "Helvetica Neue", "Segoe UI", "Emoji", sans-serif;
+  font-family: -apple-system, "Helvetica Neue", "Calibri", sans-serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 38.2rem) {
@@ -159,10 +152,8 @@ hr {
     content: "* * *"; }
 
 pre {
-  -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
-  font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "Menlo", "Consolas", "Emoji", monospace;
+  font-family: "Menlo", "Consolas", monospace;
   font-size: 1em;
   line-height: 1.36;
   overflow: auto; }
@@ -255,7 +246,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "Menlo", "Consolas", "Emoji", monospace;
+  font-family: "Menlo", "Consolas", monospace;
   font-size: 1em; }
   p code::before, p code::after, p
   var::before, p
@@ -292,8 +283,6 @@ video {
     vertical-align: bottom; }
 
 table {
-  -webkit-font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
-  font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
