--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.3
+ * style.css v6.82.4
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -95,8 +95,8 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 
 .section-footer, .post-list .info {
   color: #98928c;
-  font-size: 0.662rem;
-  line-height: 2.055; }
+  font-size: 0.882rem;
+  line-height: 1.541; }
   .section-footer .date, .post-list .info .date,
   .section-footer .tag,
   .post-list .info .tag {
@@ -109,10 +109,9 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
       color: #2175b4; } }
 
 html {
+  -webkit-font-feature-settings: "kern" 1;
+  font-feature-settings: "kern" 1;
   font-size: 100%; }
-  @media (min-width: 38.2rem) {
-    html {
-      font-size: 112.5%; } }
 
 body {
   background-color: #fcf9f0;
@@ -129,10 +128,10 @@ h1 {
   margin: 14.199rem 0 0; }
   @media (min-width: 38.2rem) {
     h1 {
-      font-size: 1.912rem; } }
+      font-size: 2.55rem; } }
 
 h2 {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   margin: 4.913rem 0 0; }
   @media (min-width: 38.2rem) {
     h2 {
@@ -334,7 +333,7 @@ svg:not(:root) {
       margin-left: -15.001rem; } }
 
 .site-navigation {
-  font-size: 0.662rem;
+  font-size: 0.882rem;
   position: absolute;
   right: 0;
   text-transform: uppercase;
@@ -344,7 +343,7 @@ svg:not(:root) {
     padding-left: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 2.569;
+    line-height: 1.927;
     padding-right: 0.85rem; }
   .site-navigation a {
     color: inherit;
@@ -363,7 +362,7 @@ svg:not(:root) {
         padding-left: 0; } }
 
 .tagline {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   line-height: 1.36;
   margin-top: 1.7rem; }
   @media (min-width: 38.2rem) {
@@ -396,10 +395,10 @@ svg:not(:root) {
     .section-footer {
       width: 12.111rem; }
       .section-footer p {
-        margin-top: 0.621rem; } }
+        margin-top: 1.054rem; } }
 
 .global-footer {
-  font-size: 0.662rem;
+  font-size: 0.882rem;
   margin-bottom: 1.7rem; }
   @media (min-width: 38.2rem) {
     .global-footer {
@@ -440,13 +439,16 @@ svg:not(:root) {
     .site-search {
       position: absolute;
       right: 0.85rem;
-      top: 7.94rem;
+      top: 8.127rem;
       width: 43%;
       z-index: 1; } }
   @media (min-width: 53.201rem) {
     .site-search {
-      top: 13.786rem;
+      top: 13.974rem;
       width: 32%; } }
+
+.bordered {
+  border: 0.063rem solid; }
 
 .drop img {
   min-width: 12.111rem; }
@@ -478,7 +480,7 @@ svg:not(:root) {
     margin-top: 0; }
 
 .footnote {
-  font-size: 0.662rem; }
+  font-size: 0.882rem; }
   .footnote::before {
     border-top: 0.063rem solid #cac6be;
     content: "";
@@ -513,7 +515,7 @@ svg:not(:root) {
 .post-list {
   padding-left: 0; }
   .post-list li {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     line-height: 1.36;
     list-style-type: none;
     margin-top: 1rem; }
@@ -573,7 +575,7 @@ svg:not(:root) {
     margin-top: 4.913rem; } }
 
 .seealso {
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   font-weight: bolder;
   text-transform: uppercase; }
   .seealso a {
@@ -582,7 +584,7 @@ svg:not(:root) {
 
 .sidenote {
   color: #98928c;
-  font-size: 0.662rem; }
+  font-size: 0.882rem; }
   @media (min-width: 53.201rem) {
     .sidenote {
       text-align: left;
