--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.4
+ * style.css v6.82.6
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -8,12 +8,12 @@
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
-  max-width: 35rem;
+  max-width: 40.46rem;
   padding-left: 0.85rem;
   padding-right: 0.85rem; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .global-header, .content, .global-footer, .subcontent {
-      padding-left: 15.851rem; } }
+      padding-left: 17.74rem; } }
 
 .flat-ul {
   zoom: 1; }
@@ -58,13 +58,13 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 .content > section, .global-footer, .subcontent, .post-list li, .read-older {
   position: relative; }
 
-@media (min-width: 53.201rem) {
+@media (min-width: 60.55rem) {
   .section-footer, .post-list .info, figcaption, .byline, .read-older a::before, .sidenote {
     margin-right: 2.89rem;
     position: absolute;
     right: 100%;
     top: 0;
-    width: 12.111rem;
+    width: 14.0rem;
     z-index: 1; } }
 
 .site-search .query, .searchbox .query {
@@ -78,7 +78,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   font-size: inherit;
   height: 1.95rem;
   padding: 0;
-  width: 74%; }
+  width: 79%; }
 .site-search .button, .searchbox .button {
   -webkit-appearance: none;
   background-color: #69a5d3;
@@ -91,7 +91,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   padding: 0;
   position: absolute;
   right: 0;
-  width: 25%; }
+  width: 20%; }
 
 .section-footer, .post-list .info {
   color: #98928c;
@@ -119,23 +119,17 @@ body {
   font-family: -apple-system, "Helvetica Neue", "Calibri", sans-serif;
   line-height: 1.53;
   margin: 0; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     body {
       line-height: 1.7; } }
 
 h1 {
   font-size: 1.7rem;
-  margin: 14.199rem 0 0; }
-  @media (min-width: 38.2rem) {
-    h1 {
-      font-size: 2.55rem; } }
+  margin: 8.352rem 0 0; }
 
 h2 {
   font-size: 1.5rem;
   margin: 4.913rem 0 0; }
-  @media (min-width: 38.2rem) {
-    h2 {
-      font-size: 1.7rem; } }
 
 hr {
   background-color: transparent;
@@ -156,7 +150,7 @@ pre {
   font-size: 1em;
   line-height: 1.36;
   overflow: auto; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     pre {
       overflow: visible;
       overflow-wrap: break-word;
@@ -167,7 +161,7 @@ blockquote {
   border-left: 0.25rem solid #e1ddd5;
   color: #6a635e;
   padding-left: 1.7rem; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     blockquote {
       margin-left: -1.95rem; } }
 
@@ -179,7 +173,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -210,7 +204,7 @@ figcaption {
     margin-top: 0;
     padding-left: 1.7rem;
     padding-top: 0.588rem; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     figcaption {
       bottom: 0;
       margin-top: 0;
@@ -310,10 +304,10 @@ svg:not(:root) {
 
 .global-header {
   margin-top: 1rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .global-header {
       margin-top: 1.7rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .global-header {
       margin-top: 2.89rem; } }
 
@@ -328,12 +322,12 @@ svg:not(:root) {
     color: inherit; }
   .logo mark {
     background-color: transparent; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .logo {
-      margin-left: -15.001rem; } }
+      margin-left: -16.89rem; } }
 
 .site-navigation {
-  font-size: 0.882rem;
+  font-size: 0.588rem;
   position: absolute;
   right: 0;
   text-transform: uppercase;
@@ -343,7 +337,7 @@ svg:not(:root) {
     padding-left: 0; }
   .site-navigation li {
     display: table-cell;
-    line-height: 1.927;
+    line-height: 2.89;
     padding-right: 0.85rem; }
   .site-navigation a {
     color: inherit;
@@ -352,38 +346,44 @@ svg:not(:root) {
     background-color: transparent;
     border-bottom: 0.125rem solid #2175b4;
     padding-bottom: 0.125rem; }
-  @media (min-width: 38.2rem) {
-    .site-navigation li {
-      padding-left: 0.85rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 43.66rem) {
+    .site-navigation {
+      font-size: 0.882rem; }
+      .site-navigation li {
+        line-height: 1.927;
+        padding-left: 0.85rem; } }
+  @media (min-width: 60.55rem) {
     .site-navigation {
       right: auto; }
       .site-navigation li:first-child {
         padding-left: 0; } }
 
 .tagline {
+  color: #1e1a18;
   font-size: 1.5rem;
-  line-height: 1.36;
+  font-weight: lighter;
+  line-height: 1.19;
   margin-top: 1.7rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .tagline {
       font-size: 1.7rem;
       margin-top: 2.89rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .tagline {
+      font-size: 2.55rem;
       margin-top: 4.913rem; } }
 
 .content {
-  margin-top: -14.199rem; }
+  margin-top: -8.352rem; }
 
 .first-heading {
-  margin-top: 17.259rem; }
-  @media (min-width: 38.2rem) {
+  margin-top: 11.412rem; }
+  @media (min-width: 43.66rem) {
     .first-heading {
-      margin-top: 18.449rem; } }
-  @media (min-width: 53.201rem) {
+      margin-top: 12.602rem; } }
+  @media (min-width: 60.55rem) {
     .first-heading {
-      margin-top: 19.112rem; } }
+      margin-top: 13.265rem; } }
 
 .section-footer {
   bottom: 100%;
@@ -391,19 +391,19 @@ svg:not(:root) {
   width: 100%; }
   .section-footer p {
     margin-top: 0; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .section-footer {
-      width: 12.111rem; }
+      width: 14.0rem; }
       .section-footer p {
-        margin-top: 1.054rem; } }
+        margin-top: 0.476rem; } }
 
 .global-footer {
   font-size: 0.882rem;
   margin-bottom: 1.7rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .global-footer {
       margin-bottom: 2.89rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .global-footer {
       margin-bottom: 4.913rem; } }
 
@@ -418,7 +418,7 @@ svg:not(:root) {
       margin-left: 0.85rem; }
     .footlinks li:last-child {
       padding-right: 0; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .footlinks {
       margin-top: 14.199rem; } }
 
@@ -427,41 +427,40 @@ svg:not(:root) {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .byline {
       bottom: 0;
-      margin-right: -12.961rem;
+      margin-right: -14.85rem;
       top: auto; } }
 
 .site-search {
   top: 4.913rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .site-search {
       position: absolute;
       right: 0.85rem;
       top: 8.127rem;
-      width: 43%;
+      width: 50%;
       z-index: 1; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .site-search {
-      top: 13.974rem;
-      width: 32%; } }
+      top: 13.974rem; } }
 
 .bordered {
   border: 0.063rem solid; }
 
 .drop img {
-  min-width: 12.111rem; }
-@media (min-width: 53.201rem) {
+  min-width: 14.0rem; }
+@media (min-width: 60.55rem) {
   .drop {
     float: left;
-    margin-left: -15.001rem;
+    margin-left: -16.89rem;
     margin-right: 0.85rem;
-    max-width: 32.501rem; } }
+    max-width: 37.12rem; } }
 
 .flat-ul {
   padding-left: 2.55rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .flat-ul {
       padding-left: 0; }
       .flat-ul li {
@@ -497,15 +496,15 @@ svg:not(:root) {
   width: 100%; }
 .full-width figcaption {
   margin-left: 0.85rem; }
-@media (min-width: 38.2rem) {
+@media (min-width: 43.66rem) {
   .full-width {
     margin-left: 0;
     margin-right: 0; }
     .full-width figcaption {
       margin-left: 0; } }
-@media (min-width: 53.201rem) {
+@media (min-width: 60.55rem) {
   .full-width {
-    margin-left: -15.001rem; }
+    margin-left: -16.89rem; }
     .full-width figcaption {
       bottom: auto;
       left: 0;
@@ -519,12 +518,12 @@ svg:not(:root) {
     line-height: 1.36;
     list-style-type: none;
     margin-top: 1rem; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .post-list .info {
       float: right;
       line-height: 2.312;
       margin-left: 0.85rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .post-list .info {
       float: none;
       margin-left: 0; } }
@@ -544,16 +543,16 @@ svg:not(:root) {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bolder; }
-  @media (min-width: 38.2rem) {
+  @media (min-width: 43.66rem) {
     .pull-quote {
       margin-left: 1.7rem;
       margin-right: 1.7rem; } }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .pull-quote {
       float: left;
-      margin-left: -15.001rem;
+      margin-left: -16.89rem;
       margin-right: 1.7rem;
-      width: 22.125rem; } }
+      width: 25.125rem; } }
 
 .read-older a::before {
   color: #3c3330;
@@ -567,7 +566,7 @@ svg:not(:root) {
   font-size: 1.7rem;
   line-height: 1.36;
   margin-top: 0.588rem; }
-@media (min-width: 53.201rem) {
+@media (min-width: 60.55rem) {
   .read-older a::before {
     line-height: 2.312;
     margin-top: 0; }
@@ -585,7 +584,7 @@ svg:not(:root) {
 .sidenote {
   color: #98928c;
   font-size: 0.882rem; }
-  @media (min-width: 53.201rem) {
+  @media (min-width: 60.55rem) {
     .sidenote {
       text-align: left;
       top: auto; } }
@@ -654,7 +653,7 @@ svg:not(:root) {
   body {
     margin-left: auto;
     margin-right: auto;
-    max-width: 35rem; }
+    max-width: 40.46rem; }
 
   pre {
     margin: 1.7rem 0 0;
