Add class when weblog page is permalink

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -2,7 +2,7 @@
 
 <!-- blosxom head -->
 <!DOCTYPE html>
-<html lang="$blog_language">
+<html lang="$blog_language"<?$permalink::is_permalink eq="1"> class="permalink"</?>>
   <head>
     {{> meta}}
 
