--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.6
+ * style.css v6.82.7
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -363,27 +363,37 @@ svg:not(:root) {
   font-size: 1.5rem;
   font-weight: lighter;
   line-height: 1.19;
-  margin-top: 1.7rem; }
+  margin-top: 2.89rem; }
   @media (min-width: 43.66rem) {
     .tagline {
       font-size: 1.7rem;
-      margin-top: 2.89rem; } }
+      margin-top: 4.913rem; } }
   @media (min-width: 60.55rem) {
     .tagline {
       font-size: 2.55rem;
-      margin-top: 4.913rem; } }
+      margin-top: 8.352rem; } }
 
 .content {
   margin-top: -8.352rem; }
 
 .first-heading {
-  margin-top: 11.412rem; }
+  margin-top: 12.602rem; }
+  .permalink .first-heading {
+    font-size: 1.5rem;
+    line-height: 1.19;
+    padding-bottom: 2.55rem; }
   @media (min-width: 43.66rem) {
     .first-heading {
-      margin-top: 12.602rem; } }
+      margin-top: 14.625rem; }
+      .permalink .first-heading {
+        font-size: 1.7rem;
+        padding-bottom: 4.573rem; } }
   @media (min-width: 60.55rem) {
     .first-heading {
-      margin-top: 13.265rem; } }
+      margin-top: 16.704rem; }
+      .permalink .first-heading {
+        font-size: 2.55rem;
+        padding-bottom: 6.652rem; } }
 
 .section-footer {
   bottom: 100%;
@@ -395,17 +405,13 @@ svg:not(:root) {
     .section-footer {
       width: 14.0rem; }
       .section-footer p {
-        margin-top: 0.476rem; } }
+        margin-top: 0.476rem; }
+        .permalink .section-footer p {
+          margin-top: 0.837rem; } }
 
 .global-footer {
   font-size: 0.882rem;
-  margin-bottom: 1.7rem; }
-  @media (min-width: 43.66rem) {
-    .global-footer {
-      margin-bottom: 2.89rem; } }
-  @media (min-width: 60.55rem) {
-    .global-footer {
-      margin-bottom: 4.913rem; } }
+  margin-bottom: 2.89rem; }
 
 .footlinks {
   margin-top: 8.352rem;
@@ -444,7 +450,8 @@ svg:not(:root) {
       z-index: 1; } }
   @media (min-width: 60.55rem) {
     .site-search {
-      top: 13.974rem; } }
+      top: 13.974rem;
+      width: 33.333%; } }
 
 .bordered {
   border: 0.063rem solid; }
