--- a/styles/debug.css
+++ b/styles/debug.css
@@ -57,7 +57,7 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: -apple-system, "Helvetica Neue", "Calibri", sans-serif; }
+  font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif; }
 
 .font-family-pre {
   font-family: "Menlo", "Consolas", monospace; }
