--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.7
+ * style.css v6.82.8
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -109,14 +109,14 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
       color: #2175b4; } }
 
 html {
-  -webkit-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
+  -webkit-font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
+  font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: -apple-system, "Helvetica Neue", "Calibri", sans-serif;
+  font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 43.66rem) {
@@ -145,6 +145,8 @@ hr {
     content: "* * *"; }
 
 pre {
+  -webkit-font-feature-settings: "zero" 1;
+  font-feature-settings: "zero" 1;
   clear: both;
   font-family: "Menlo", "Consolas", monospace;
   font-size: 1em;
@@ -239,6 +241,8 @@ code,
 var,
 samp,
 kbd {
+  -webkit-font-feature-settings: "zero" 1;
+  font-feature-settings: "zero" 1;
   font-family: "Menlo", "Consolas", monospace;
   font-size: 1em; }
   p code::before, p code::after, p
@@ -276,10 +280,13 @@ video {
     vertical-align: bottom; }
 
 table {
+  -webkit-font-feature-settings: "tnum" 1;
+  font-feature-settings: "tnum" 1;
+  border-bottom: 0.063rem solid #cac6be;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
-  display: block;
+  display: inline-block;
   max-width: 100%;
   overflow-x: auto;
   table-layout: fixed; }
@@ -454,7 +461,7 @@ svg:not(:root) {
       width: 33.333%; } }
 
 .bordered {
-  border: 0.063rem solid; }
+  border: 0.063rem solid #e1ddd5; }
 
 .drop img {
   min-width: 14.0rem; }
