--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.8
+ * style.css v6.82.9
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -306,6 +306,17 @@ th {
   thead th {
     border-bottom: 0.125rem solid #cac6be; }
 
+:-ms-input-placeholder {
+  color: inherit;
+  opacity: .54; }
+
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: .54; }
+
+:placeholder-shown {
+  opacity: .54; }
+
 svg:not(:root) {
   overflow: hidden; }
 
@@ -351,8 +362,7 @@ svg:not(:root) {
     display: inline-block; }
   .site-navigation mark {
     background-color: transparent;
-    border-bottom: 0.125rem solid #2175b4;
-    padding-bottom: 0.125rem; }
+    border-bottom: 0.125rem solid #2175b4; }
   @media (min-width: 43.66rem) {
     .site-navigation {
       font-size: 0.882rem; }
