--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.9
+ * style.css v6.82.10
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -478,6 +478,7 @@ svg:not(:root) {
 @media (min-width: 60.55rem) {
   .drop {
     float: left;
+    margin-bottom: 0.35rem;
     margin-left: -16.89rem;
     margin-right: 0.85rem;
     max-width: 37.12rem; } }
@@ -497,6 +498,7 @@ svg:not(:root) {
 
 .float {
   float: right;
+  margin-bottom: 0.35rem;
   margin-left: 0.85rem;
   max-width: 34.602%; }
   .float:first-child {
