Use only `rel=next`

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -19,7 +19,7 @@
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
-            <a href="{{link}}" loadpolicy="next" rel="preload prerender">
+            <a href="{{link}}" rel="next">
               <h1 class="first-heading">{{title}}</h1>
 
               <footer class="section-footer">
