--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.10
+ * style.css v6.82.11
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -638,7 +638,8 @@ svg:not(:root) {
   aside,
   nav,
   hr::before,
-  .global-header,
+  .site-navigation,
+  .tagline,
   .footlinks,
   .byline::before,
   .icon-list,
@@ -648,14 +649,14 @@ svg:not(:root) {
     display: none; }
 
   body {
-    font-family: serif; }
+    font-family: "Palatino", "Palatino Linotype", serif; }
 
   pre,
   code,
   samp,
   var,
   kbd {
-    font-family: monospace; }
+    font-family: "Menlo", "Consolas", monospace; }
 
   h1,
   h2,
@@ -695,6 +696,10 @@ svg:not(:root) {
   td {
     white-space: normal; }
 
+  .logo {
+    font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif;
+    font-size: 1.7rem; }
+
   .content,
   .global-footer {
     max-width: none; }
@@ -706,4 +711,8 @@ svg:not(:root) {
     margin-top: 3.4rem; }
 
   .byline {
-    margin-top: 4.913rem; } }
+    margin-top: 4.913rem; }
+
+  .footnote,
+  .sidenote {
+    display: block; } }
