--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.82.11
+ * style.css v6.83.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -15,12 +15,12 @@
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 17.74rem; } }
 
-.flat-ul {
+.flat-list {
   zoom: 1; }
-  .flat-ul:before, .flat-ul:after {
+  .flat-list:before, .flat-list:after {
     display: block;
     content: ""; }
-  .flat-ul:after {
+  .flat-list:after {
     clear: both; }
 
 .section-footer p {
@@ -28,7 +28,7 @@
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-.flat-ul, .full-width {
+.fill, .flat-list {
   margin-left: -0.85rem;
   margin-right: -0.85rem; }
 
@@ -483,12 +483,34 @@ svg:not(:root) {
     margin-right: 0.85rem;
     max-width: 37.12rem; } }
 
-.flat-ul {
+.fill img,
+.fill video,
+.fill canvas {
+  border: 0;
+  width: 100%; }
+.fill figcaption {
+  margin-left: 0.85rem; }
+@media (min-width: 43.66rem) {
+  .fill {
+    margin-left: 0;
+    margin-right: 0; }
+    .fill figcaption {
+      margin-left: 0; } }
+@media (min-width: 60.55rem) {
+  .fill {
+    margin-left: -16.89rem; }
+    .fill figcaption {
+      bottom: auto;
+      left: 0;
+      margin-top: 1.7rem;
+      text-align: left; } }
+
+.flat-list {
   padding-left: 2.55rem; }
   @media (min-width: 43.66rem) {
-    .flat-ul {
+    .flat-list {
       padding-left: 0; }
-      .flat-ul li {
+      .flat-list li {
         box-sizing: border-box;
         display: block;
         float: left;
@@ -514,28 +536,6 @@ svg:not(:root) {
     width: 25%; }
   .footnote :first-child {
     margin-top: 0.588rem; }
-
-.full-width img,
-.full-width video,
-.full-width canvas {
-  border: 0;
-  width: 100%; }
-.full-width figcaption {
-  margin-left: 0.85rem; }
-@media (min-width: 43.66rem) {
-  .full-width {
-    margin-left: 0;
-    margin-right: 0; }
-    .full-width figcaption {
-      margin-left: 0; } }
-@media (min-width: 60.55rem) {
-  .full-width {
-    margin-left: -16.89rem; }
-    .full-width figcaption {
-      bottom: auto;
-      left: 0;
-      margin-top: 1.7rem;
-      text-align: left; } }
 
 .post-list {
   padding-left: 0; }
