Revert "Remove Read Older link"
This reverts commit ed9b3dbb2a7f4e230a3142fe0ee1a77c2a4bf58f.

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -48,6 +48,12 @@
         {{> google-adsense}}
       </?>
 
+      <?$back_and_forth::enabled eq="1">
+        <nav class="read-older">
+          $back_and_forth::prev
+        </nav>
+      </?>
+
 <!-- blosxom foot -->
       <?$categories::enabled eq="1">
           </ol>
@@ -63,6 +69,11 @@
   </body>
 </html>
 <!-- DEBUG: $utils::debug -->
+
+<!-- blosxom back_and_forth_prev -->
+<a href="$back_and_forth::prev_url" rel="prev">
+  <p>$back_and_forth::prev_title</p>
+</a>
 
 <!-- blosxom categories_story -->
             <li>
