Use `rel=next` for preloading

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -49,9 +49,7 @@
       </?>
 
       <?$back_and_forth::enabled eq="1">
-        <nav class="read-older">
-          $back_and_forth::prev
-        </nav>
+        $back_and_forth::prev
       </?>
 
 <!-- blosxom foot -->
@@ -71,9 +69,11 @@
 <!-- DEBUG: $utils::debug -->
 
 <!-- blosxom back_and_forth_prev -->
-<a href="$back_and_forth::prev_url" rel="prev">
-  <p>$back_and_forth::prev_title</p>
-</a>
+<nav class="read-older">
+  <a href="$back_and_forth::prev_url" rel="next">
+    <p>$back_and_forth::prev_title</p>
+  </a>
+</nav>
 
 <!-- blosxom categories_story -->
             <li>
