Add order configuration

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -49,7 +49,7 @@
       </?>
 
       <?$back_and_forth::enabled eq="1">
-        $back_and_forth::prev
+        $back_and_forth::next
       </?>
 
 <!-- blosxom foot -->
@@ -68,10 +68,10 @@
 </html>
 <!-- DEBUG: $utils::debug -->
 
-<!-- blosxom back_and_forth_prev -->
+<!-- blosxom back_and_forth_next -->
 <nav class="read-older">
-  <a href="$back_and_forth::prev_url" rel="next">
-    <p>$back_and_forth::prev_title</p>
+  <a href="$back_and_forth::next_url" rel="next">
+    <p>$back_and_forth::next_title</p>
   </a>
 </nav>
 
