--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,3 +1,4 @@
 <link href="{{touch_icon}}" rel="apple-touch-icon" type="image/png">
 <link href="{{canonical}}" rel="canonical">
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+{{#weblog_child}}<?$back_and_forth::enabled eq="1">$back_and_forth::link_next</?>{{/weblog_child}}
