Optimize `link` markup for prerendering

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -5,10 +5,14 @@
 <html lang="$blog_language"<?$permalink::is_permalink eq="1"> class="permalink"</?>>
   <head>
     {{> meta}}
+    <?$permalink::is_permalink ne="1"><meta content="{{description}}" name="description"></?>
+    <?$permalink::is_permalink eq="1"><meta content="$permalink::description" name="description"></?>
+    <meta content="blosxom v$version" name="generator">
 
     <title>$categories::title$categories::title_sep$permalink::title$permalink::title_sep$blog_title - {{site_title}}</title>
 
     {{> link}}
+    <?$back_and_forth::enabled eq="1">$back_and_forth::link_next</?>
 
     {{> style}}
 
@@ -70,7 +74,7 @@
 
 <!-- blosxom back_and_forth_next -->
 <nav class="read-older">
-  <a href="$back_and_forth::next_url" rel="next">
+  <a href="$back_and_forth::next_url" rel="next prerender">
     <p>$back_and_forth::next_title</p>
   </a>
 </nav>
