--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,6 +7,12 @@
 
     {{> link}}
 
+    {{#home}}
+      {{#articles}}
+        {{#first}}<link href="{{link}}" rel="prerender">{{/first}}
+      {{/articles}}
+    {{/home}}
+
     {{> style}}
 
     {{> script}}
@@ -19,7 +25,7 @@
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
-            <a href="{{link}}" rel="next">
+            <a href="{{link}}" rel="prerender">
               <h1 class="first-heading">{{title}}</h1>
 
               <footer class="section-footer">
