--- a/styles/debug.css
+++ b/styles/debug.css
@@ -57,10 +57,10 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif; }
+  font-family: "Eau Douce", sans-serif; }
 
 .font-family-pre {
-  font-family: "Menlo", "Consolas", monospace; }
+  font-family: "M+ 1m Latin", monospace; }
 
 .italic {
   font-style: italic; }
