--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.83.0
+ * style.css v6.84.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -116,7 +116,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif;
+  font-family: "Eau Douce", sans-serif;
   line-height: 1.53;
   margin: 0; }
   @media (min-width: 43.66rem) {
@@ -148,7 +148,7 @@ pre {
   -webkit-font-feature-settings: "zero" 1;
   font-feature-settings: "zero" 1;
   clear: both;
-  font-family: "Menlo", "Consolas", monospace;
+  font-family: "M+ 1m Latin", monospace;
   font-size: 1em;
   line-height: 1.36;
   overflow: auto; }
@@ -243,7 +243,7 @@ samp,
 kbd {
   -webkit-font-feature-settings: "zero" 1;
   font-feature-settings: "zero" 1;
-  font-family: "Menlo", "Consolas", monospace;
+  font-family: "M+ 1m Latin", monospace;
   font-size: 1em; }
   p code::before, p code::after, p
   var::before, p
@@ -656,7 +656,7 @@ svg:not(:root) {
   samp,
   var,
   kbd {
-    font-family: "Menlo", "Consolas", monospace; }
+    font-family: "M+ 1m Latin", monospace; }
 
   h1,
   h2,
@@ -697,7 +697,7 @@ svg:not(:root) {
     white-space: normal; }
 
   .logo {
-    font-family: -apple-system, "Helvetica Neue", "Noto Sans", "Roboto", "Calibri", sans-serif;
+    font-family: "Eau Douce", sans-serif;
     font-size: 1.7rem; }
 
   .content,
