--- a/styles/eau-douce.css
+++ b/styles/eau-douce.css
@@ -1,10 +1,15 @@
 @font-face {
   font-family: "Eau Douce";
-  font-weight: 400;
   font-style: normal;
-  src: url("../fonts/eau-douce/r.woff") format("woff"), url("../fonts/eau-douce/r.woff2") format("woff2"); }
+  font-weight: 100;
+  src: url("../fonts/eau-douce/t.woff2") format("woff2"), url("../fonts/eau-douce/t.woff") format("woff"); }
 @font-face {
   font-family: "Eau Douce";
-  font-weight: 700;
   font-style: normal;
-  src: url("../fonts/eau-douce/b.woff") format("woff"), url("../fonts/eau-douce/b.woff2") format("woff2"); }
+  font-weight: 400;
+  src: url("../fonts/eau-douce/r.woff2") format("woff2"), url("../fonts/eau-douce/r.woff") format("woff"); }
+@font-face {
+  font-family: "Eau Douce";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/eau-douce/b.woff2") format("woff2"), url("../fonts/eau-douce/b.woff") format("woff"); }
