--- a/styles/mplus-1m-latin.css
+++ b/styles/mplus-1m-latin.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "M+ 1m Latin";
-  font-weight: 400;
   font-style: normal;
-  src: url("../fonts/mplus-1m-latin/r.woff") format("woff"), url("../fonts/mplus-1m-latin/r.woff2") format("woff2"); }
+  font-weight: 400;
+  src: url("../fonts/mplus-1m-latin/r.woff2") format("woff2"), url("../fonts/mplus-1m-latin/r.woff") format("woff"); }
 @font-face {
   font-family: "M+ 1m Latin";
-  font-weight: 700;
   font-style: normal;
-  src: url("../fonts/mplus-1m-latin/b.woff") format("woff"), url("../fonts/mplus-1m-latin/b.woff2") format("woff2"); }
+  font-weight: 700;
+  src: url("../fonts/mplus-1m-latin/b.woff2") format("woff2"), url("../fonts/mplus-1m-latin/b.woff") format("woff"); }
